Implementado paginação de dados

--- a/template/contato/listar-contatos-publicos.html
+++ b/template/contato/listar-contatos-publicos.html
@@ -90,7 +90,9 @@
                                                 </tr>
                                                 {{- end -}}
                                             </tbody>
-                                        </table>     
+                                        </table> 
+                                        <hr />
+                                        {{.Parametro.Paginacao}}    
                                     {{end}}
                                 </div>
                                 <!-- /.card-body -->
