--- a/template/contato/listar.html
+++ b/template/contato/listar.html
@@ -129,6 +129,8 @@
                                                 {{- end -}}
                                             </tbody>
                                         </table>
+                                        <hr />
+                                        {{.Parametro.Paginacao}} 
                                     {{end}}
                                 </div>
                                 <!-- /.card-body -->
